--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="row">
 
                <div class="col-md-12 col-sm-12">
-                    <h2 class="begintitel" style="width: 70%; margin-left: 15%;">I am a user interface designer in progress and a creative sporty. Test.</h2>
+                    <h2 class="begintitel" style="width: 70%; margin-left: 15%;">I am a user interface designer in progress and a creative sporty.</h2>
                     
                </div>
 
