--- a/index.html
+++ b/index.html
@@ -90,16 +90,20 @@
      <div class="container">
           <div class="row">
 
+						<div class="col-md-3 col-sm-3 star">
+									 </div>
 						<div class="col-md-6 col-sm-6 star">
 		                         <div class="portfolio-thumb">
-		                              <a href=""><img src="assets/work/sprong/Sprong-Workpage.png" class="img-responsive" alt="Portfolio"></a>
-		                              <a href=""><div class="portfolio-overlay">
+		                              <a href="sprong.html"><img src="assets/work/sprong/Sprong-Workpage.png" class="img-responsive" alt="Portfolio"></a>
+		                              <a href="sprong.html"><div class="portfolio-overlay">
 		                                        <div class="portfolio-item">
 		                                        </div>
 										  </div></a>
 
 		                         </div>
 		               </div>
+									 <div class="col-md-3 col-sm-3 star">
+									 				</div>
 
 			  <div class="col-md-6 col-sm-6 star">
                          <div class="portfolio-thumb">
