--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
 
+<head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<meta name="description" content="">
-<meta name="keywords" content="">
-<meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
 
 <title>Saskia Wijnstra</title>
 
-	<link rel="icon" type="image/png" href="assets/saskia.nl/favicon-32.png" />
+<meta itemprop="name" content="Saskia Wijnstra"/>
+<meta name="description" content="The portfolio website from Saskia Wijnstra. Digital Designer and Creative Sporty.">
+<meta name="keywords" content="Saskia, Wijnstra, Design, User Interface, Digital, Designer, Creative, Portfolio.">
+<meta name="author" content="Saskia Wijnstra">
+<meta itemprop="url" content="http://www.saskiawijnstra.nl/"/>
+<meta itemprop="thumbnailUrl" content="assets/saskia.nl/Saskia-1000w.png" />
+<meta itemprop="image" content="assets/saskia.nl/Saskia-1000w.png" />
+<link rel="image_src" href="assets/saskia.nl/Saskia-1000w.png" />
+
+<meta property="og:image" content="assets/saskia.nl/Saskia-1000w.png" />
+<meta property="og:site_name" content="Saskia Wijnstra"/>
+<meta property="og:title" content="Saskia Wijnstra"/>
+<meta property="og:url" content="http://www.saskiawijnstra.nl/"/>
+<meta property="og:type" content="website"/>
+<meta property="og:description" content="The portfolio website from Saskia Wijnstra. Digital Designer and Creative Sporty."/>
+
+<link rel="icon" type="image/png" href="assets/saskia.nl/favicon-32.png"/>
+<link rel="shortcut icon" type="image/x-icon" href="assets/saskia.nl/favicon-32.png"/>
+
+	
+<!--------->
 
 
 <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
@@ -38,7 +54,6 @@
 	<!--<link rel="stylesheet" href="assets/css/grijs.css">-->
 	<link rel="stylesheet" href="assets/css/wit.css">
 <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 
 </head>
@@ -76,7 +91,8 @@
           <div class="row">
 
                <div class="col-md-12 col-sm-12">
-                    <h2 class="begintitel" style="width: 70%; margin-left: 15%;">I am a user interface designer and a creative sporty.</h2>
+                    <h3 align="left">I am an user interface designer<br> and a creative sporty.</h3>
+				   <!--<h2 class="begintitel" style="width: 70%; margin-left: 15%;">I am a user interface designer and a creative sporty.</h2>-->
 
                </div>
 
@@ -215,7 +231,6 @@
 
 <script src="assets/js/jquery.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/custom.js"></script>
 
 <script src="//code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 
