--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="row">
 
                <div class="col-md-12 col-sm-12">
-                    <h3 align="left">I am a Digital & Visual Designer.<br>Design is making clear creative<br>solutions from messy ideas.</h3>
+                    <h3 align="left" class="ruimte">I am a Digital & Visual Designer.<br>Design is making clear creative<br>solutions from messy ideas.</h3>
 				   <!--<h2 class="begintitel" style="width: 70%; margin-left: 15%;">I am a user interface designer and a creative sporty.</h2>-->
 
                </div>
