--- a/index.html
+++ b/index.html
@@ -1,6 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--
+================================================================
+
+Website: www.saskiawijnstra.nl | E-mail: info@saskiawijnstra.nl
+
+Love to hangout and have a cup? Feel free to contact me!
+
+         {
+      {   }
+       }_{ __{
+    .-{   }   }-.
+   (   }     {   )
+   |`-.._____..-'|
+   |             ;--.
+   |            (__  \
+   |             | )  )
+   |             |/  /
+   |             /  /
+   |            (  /
+   \             y'
+    `-.._____..-'
+
+================================================================
+-->
+
+
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
