--- a/sprong.html
+++ b/sprong.html
@@ -136,16 +136,16 @@
 				   <div class="slider-container">
 					   
 					   <div id="slides">
-            				<div class="slide"></div>
-           					<div class="slide"></div>
-							<div class="slide"></div>
-							<div class="slide"></div>
-							<div class="slide"></div>
-						   <div class="slide"></div>
-							<div class="slide"></div>
-							<div class="slide"></div>
-						   <div class="slide"></div>
-							<div class="slide"></div>
+            				<div class="slide sprong"></div>
+           					<div class="slide sprong"></div>
+							<div class="slide sprong"></div>
+							<div class="slide sprong"></div>
+							<div class="slide sprong"></div>
+						   <div class="slide sprong"></div>
+							<div class="slide sprong"></div>
+							<div class="slide sprong"></div>
+						   <div class="slide sprong"></div>
+							<div class="slide sprong"></div>
         				</div>
 					   
 				   </div>
