--- a/luchtacro/aerial.html
+++ b/luchtacro/aerial.html
@@ -25,8 +25,11 @@
             <div id="myBtnContainer">
                 <button class="btn allbtn active" onclick="filterSelection('all')"> Show all</button>
                 <button class="btn val" onclick="filterSelection('fall')"> Val</button>
+                <button class="btn allbtn" onclick="filterSelection('noval')"> Geen val</button>
                 <button class="btn inversion" onclick="filterSelection('inversionn')"> Inversion</button>
                 <button class="btn backcross" onclick="filterSelection('backcrosss')"> Back cross</button>
+                <button class="btn schaar" onclick="filterSelection('schaarr')"> Schaar</button>
+                <button class="btn footlock" onclick="filterSelection('voetslot')"> Footlock</button>
             </div>
         </div>
     </div>
@@ -35,7 +38,7 @@
     <div class="panel">
     </div>
     <div class="row">
-        <div class="half container filterDiv">
+        <div class="half container filterDiv noval">
             <video id="vid1" width="100%" controls muted loop>
   	<source src="assets/spagaat.mp4" type="video/mp4;">
 	Your browser does not support the video tag.
@@ -164,6 +167,113 @@
             <p>1. Knoop erin.<br>2. Borstwaardsom erin.<br>3. Omdraaien.<br>4. Voeten haken en omhoog gaan zitten.<br>5.Het doek naar voren halen, achter je been.<br>6. Loslaten.</p>
         </div>
 
+
+
+
+
+
+
+
+
+        <div class="half container filterDiv fall schaarr">
+            <video id="vid11" width="100%" controls muted loop>
+                      <source src="assets/drive/overslag.mp4" type="video/mp4;">
+                    Your browser does not support the video tag.
+                    </video>
+            <h3></h3>
+            <h2>Overslag</h2>
+            <button class="val">Val</button><button class="schaar">Schaar</button>
+            <p></p>
+        </div>
+
+        <div class="half container filterDiv noval voetslot">
+            <video id="vid12" width="100%" controls muted loop>
+                      <source src="assets/drive/halvemaan.mp4" type="video/mp4;">
+                    Your browser does not support the video tag.
+                    </video>
+            <h3></h3>
+            <h2>Halve maan</h2>
+            <button class="footlock">Footlock</button>
+            <p></p>
+        </div>
+
+        <div class="half container filterDiv fall inversionn">
+            <video id="vid13" width="100%" controls muted loop>
+                          <source src="assets/drive/lusval.mp4" type="video/mp4;">
+                        Your browser does not support the video tag.
+                        </video>
+            <h3></h3>
+            <h2>Lus val</h2>
+            <button class="val">Val</button><button class="inversion">Inversion</button>
+            <p></p>
+        </div>
+
+        <div class="half container filterDiv fall backcrosss">
+            <video id="vid14" width="100%" controls muted loop>
+                              <source src="assets/drive/dubbeleoverslag.mp4" type="video/mp4;">
+                            Your browser does not support the video tag.
+                            </video>
+            <h3></h3>
+            <h2>Dubbele overslag</h2>
+            <button class="val">Val</button><button class="backcross">Back cross</button>
+            <p></p>
+        </div>
+
+        <div class="half container filterDiv noval schaarr">
+            <video id="vid15" width="100%" controls muted loop>
+                                  <source src="assets/drive/schaarstoel.mp4" type="video/mp4;">
+                                Your browser does not support the video tag.
+                                </video>
+            <h3></h3>
+            <h2>Schaar stoel</h2>
+            <button class="schaar">Schaar</button>
+            <p></p>
+        </div>
+
+        <div class="half container filterDiv fall schaarr">
+            <video id="vid16" width="100%" controls muted loop>
+                                      <source src="assets/drive/loadedgun.mp4" type="video/mp4;">
+                                    Your browser does not support the video tag.
+                                    </video>
+            <h3></h3>
+            <h2>Loaded gun</h2>
+            <button class="val">Val</button><button class="schaar">Schaar</button>
+            <p></p>
+        </div>
+
+        <div class="half container filterDiv fall schaarr">
+            <video id="vid17" width="100%" controls muted loop>
+                                              <source src="assets/drive/schaardrop.mp4" type="video/mp4;">
+                                            Your browser does not support the video tag.
+                                            </video>
+            <h3></h3>
+            <h2>Schaardrop</h2>
+            <button class="val">Val</button><button class="schaar">Schaar</button>
+            <p></p>
+        </div>
+
+        <div class="half container filterDiv noval inversionn">
+            <video id="vid18" width="100%" controls muted loop>
+                                          <source src="assets/drive/vlagbackband.mp4" type="video/mp4;">
+                                        Your browser does not support the video tag.
+                                        </video>
+            <h3></h3>
+            <h2>Vlag backband</h2>
+            <button class="inversion">Inversion</button>
+            <p></p>
+        </div>
+
+        <div class="half container filterDiv noval voetslot">
+            <video id="vid19" width="100%" controls muted loop>
+                                              <source src="assets/drive/foodlockdraai.mp4" type="video/mp4;">
+                                            Your browser does not support the video tag.
+                                            </video>
+            <h3></h3>
+            <h2>Foodlock draai</h2>
+            <button class="footlock">Footlock</button>
+            <p></p>
+        </div>
+
     </div>
 
 
@@ -241,6 +351,34 @@
         };
         document.getElementById('vid10').onloadedmetadata = function() {
             this.currentTime = 3;
+        };
+        document.getElementById('vid11').onloadedmetadata = function() {
+            this.currentTime = 40;
+        };
+        document.getElementById('vid12').onloadedmetadata = function() {
+            this.currentTime = 34;
+        };
+        document.getElementById('vid13').onloadedmetadata = function() {
+            this.currentTime = 9;
+        };
+        document.getElementById('vid14').onloadedmetadata = function() {
+            this.currentTime = 71;
+        };
+        document.getElementById('vid15').onloadedmetadata = function() {
+            this.currentTime = 66;
+        };
+        document.getElementById('vid16').onloadedmetadata = function() {
+            this.currentTime = 25;
+        };
+        document.getElementById('vid17').onloadedmetadata = function() {
+            this.currentTime = 9;
+        };
+        document.getElementById('vid18').onloadedmetadata = function() {
+            this.currentTime = 31;
+        };
+
+        document.getElementById('vid19').onloadedmetadata = function() {
+            this.currentTime = 32;
         };
     </script>
 
