--- a/luchtacro/aerial.html
+++ b/luchtacro/aerial.html
@@ -12,9 +12,6 @@
 <body class="content" style="max-width:1200px">
 
 
-
-
-
     <!-- First Grid: Logo & About -->
     <div class="row">
         <div class="half container">
@@ -33,6 +30,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- Second Grid: Resent -->
     <div class="panel">
@@ -129,7 +127,7 @@
               <source src="assets/drive/2half.mp4" type="video/mp4;">
             Your browser does not support the video tag.
             </video>
-            <h3></h3>
+            <h3>18 Juli 2018</h3>
             <h2>2.5 Schroef gespreid</h2>
             <button class="val">Val</button><button class="inversion">Inversion</button>
             <p>1. Flamingo, om beide voeten en spreid inversion, haken in knieholte.<br>2. Doek om onderste been, tik tok om je buik weg doen en weer haken.<br>3. Om je onderste been en 2x om je buik.<br>4. Been los haken en gespreid blijven.<br>5. Loswikkelen</p>
@@ -150,7 +148,7 @@
                   <source src="assets/drive/crazyfall1_2.mp4" type="video/mp4;">
                 Your browser does not support the video tag.
                 </video>
-            <h3></h3>
+            <h3>12 December 2019</h3>
             <h2>1.5 Crazy Fall</h2>
             <button class="val">Val</button><button class="inversion">Inversion</button>
             <p>1. Flamingo, om beide voeten en spreid inversion, haken met knieholte.<br>2. Doek om onderste been, buik, rug, schouder.<br>3. Omhoog en gaan zitten (voelt raar, omdat het de andere kant is).<br>4. Loslaten.<br>5. Afwikkelen.</p>
@@ -180,7 +178,7 @@
                       <source src="assets/drive/overslag.mp4" type="video/mp4;">
                     Your browser does not support the video tag.
                     </video>
-            <h3></h3>
+            <h3>22 September 2018</h3>
             <h2>Overslag</h2>
             <button class="val">Val</button><button class="schaar">Schaar</button>
             <p></p>
@@ -191,7 +189,7 @@
                       <source src="assets/drive/halvemaan.mp4" type="video/mp4;">
                     Your browser does not support the video tag.
                     </video>
-            <h3></h3>
+            <h3>22 September 2018</h3>
             <h2>Halve maan</h2>
             <button class="footlock">Footlock</button>
             <p></p>
@@ -202,7 +200,7 @@
                           <source src="assets/drive/lusval.mp4" type="video/mp4;">
                         Your browser does not support the video tag.
                         </video>
-            <h3></h3>
+            <h3>22 September 2018</h3>
             <h2>Lus val</h2>
             <button class="val">Val</button><button class="inversion">Inversion</button>
             <p></p>
@@ -213,7 +211,7 @@
                               <source src="assets/drive/dubbeleoverslag.mp4" type="video/mp4;">
                             Your browser does not support the video tag.
                             </video>
-            <h3></h3>
+            <h3>22 September 2018</h3>
             <h2>Dubbele overslag</h2>
             <button class="val">Val</button><button class="backcross">Back cross</button>
             <p></p>
@@ -224,7 +222,7 @@
                                   <source src="assets/drive/schaarstoel.mp4" type="video/mp4;">
                                 Your browser does not support the video tag.
                                 </video>
-            <h3></h3>
+            <h3>7 November 2018</h3>
             <h2>Schaar stoel</h2>
             <button class="schaar">Schaar</button>
             <p></p>
@@ -235,7 +233,7 @@
                                       <source src="assets/drive/loadedgun.mp4" type="video/mp4;">
                                     Your browser does not support the video tag.
                                     </video>
-            <h3></h3>
+            <h3>7 November 2018</h3>
             <h2>Loaded gun</h2>
             <button class="val">Val</button><button class="schaar">Schaar</button>
             <p></p>
@@ -274,161 +272,163 @@
             <p></p>
         </div>
 
-    </div>
 
 
 
 
 
-    <div class="panel">
-    </div>
-    <div class="row">
-        <div class="half container">
-            <h2>Inspiratie</h2>
-            <a href="https://www.masterthesilks.com/mts-video-series-667689/" target="_blank">
-                <p>1. Master the silks
-                </p>
-            </a>
-            <a href="https://www.masterthesilks.com/mts-video-series-667689-3/" target="_blank">
-                <p>2. Master the silks</p>
-            </a>
-            <a href="https://www.masterthesilks.com/aphvideoseries398/" target="_blank">
-                <p>3. Master the silks</p>
-            </a>
-
-            <a href="https://www.aerialphysique.com/" target="_blank">
-                <p>Aerial Phisique</p>
-            </a>
 
 
+
+        <div class="panel">
+        </div>
+        <div class="row">
+            <div class="half container">
+                <h2>Inspiratie</h2>
+                <a href="https://www.masterthesilks.com/mts-video-series-667689/" target="_blank">
+                    <p>1. Master the silks
+                    </p>
+                </a>
+                <a href="https://www.masterthesilks.com/mts-video-series-667689-3/" target="_blank">
+                    <p>2. Master the silks</p>
+                </a>
+                <a href="https://www.masterthesilks.com/aphvideoseries398/" target="_blank">
+                    <p>3. Master the silks</p>
+                </a>
+
+                <a href="https://www.aerialphysique.com/" target="_blank">
+                    <p>Aerial Phisique</p>
+                </a>
+
+
+            </div>
+
+
+            <div class="half container">
+                <h2>Instagram</h2>
+                <a href="https://www.instagram.com/aerialphysique/" target="_blank">
+                    <p>@aerialphisique
+                    </p>
+                </a>
+                <a href="https://www.instagram.com/tatiarranhaceu/" target="_blank">
+                    <p>@tatiarranhaceu
+                    </p>
+                </a>
+            </div>
+        </div>
+        <div class="panel">
         </div>
 
 
-        <div class="half container">
-            <h2>Instagram</h2>
-            <a href="https://www.instagram.com/aerialphysique/" target="_blank">
-                <p>@aerialphisique
-                </p>
-            </a>
-            <a href="https://www.instagram.com/tatiarranhaceu/" target="_blank">
-                <p>@tatiarranhaceu
-                </p>
-            </a>
-        </div>
-    </div>
-    <div class="panel">
-    </div>
 
+        <script>
+            document.getElementById('vid1').onloadedmetadata = function() {
+                this.currentTime = 16;
+            };
+            document.getElementById('vid2').onloadedmetadata = function() {
+                this.currentTime = 8;
+            };
+            document.getElementById('vid3').onloadedmetadata = function() {
+                this.currentTime = 40;
+            };
+            document.getElementById('vid4').onloadedmetadata = function() {
+                this.currentTime = 30;
+            };
+            document.getElementById('vid5').onloadedmetadata = function() {
+                this.currentTime = 27;
+            };
+            document.getElementById('vid6').onloadedmetadata = function() {
+                this.currentTime = 32;
+            };
+            document.getElementById('vid7').onloadedmetadata = function() {
+                this.currentTime = 56;
+            };
+            document.getElementById('vid8').onloadedmetadata = function() {
+                this.currentTime = 42;
+            };
+            document.getElementById('vid9').onloadedmetadata = function() {
+                this.currentTime = 10;
+            };
+            document.getElementById('vid10').onloadedmetadata = function() {
+                this.currentTime = 3;
+            };
+            document.getElementById('vid11').onloadedmetadata = function() {
+                this.currentTime = 40;
+            };
+            document.getElementById('vid12').onloadedmetadata = function() {
+                this.currentTime = 34;
+            };
+            document.getElementById('vid13').onloadedmetadata = function() {
+                this.currentTime = 9;
+            };
+            document.getElementById('vid14').onloadedmetadata = function() {
+                this.currentTime = 71;
+            };
+            document.getElementById('vid15').onloadedmetadata = function() {
+                this.currentTime = 66;
+            };
+            document.getElementById('vid16').onloadedmetadata = function() {
+                this.currentTime = 25;
+            };
+            document.getElementById('vid17').onloadedmetadata = function() {
+                this.currentTime = 9;
+            };
+            document.getElementById('vid18').onloadedmetadata = function() {
+                this.currentTime = 31;
+            };
 
+            document.getElementById('vid19').onloadedmetadata = function() {
+                this.currentTime = 32;
+            };
+        </script>
 
-    <script>
-        document.getElementById('vid1').onloadedmetadata = function() {
-            this.currentTime = 16;
-        };
-        document.getElementById('vid2').onloadedmetadata = function() {
-            this.currentTime = 8;
-        };
-        document.getElementById('vid3').onloadedmetadata = function() {
-            this.currentTime = 40;
-        };
-        document.getElementById('vid4').onloadedmetadata = function() {
-            this.currentTime = 30;
-        };
-        document.getElementById('vid5').onloadedmetadata = function() {
-            this.currentTime = 27;
-        };
-        document.getElementById('vid6').onloadedmetadata = function() {
-            this.currentTime = 32;
-        };
-        document.getElementById('vid7').onloadedmetadata = function() {
-            this.currentTime = 56;
-        };
-        document.getElementById('vid8').onloadedmetadata = function() {
-            this.currentTime = 42;
-        };
-        document.getElementById('vid9').onloadedmetadata = function() {
-            this.currentTime = 10;
-        };
-        document.getElementById('vid10').onloadedmetadata = function() {
-            this.currentTime = 3;
-        };
-        document.getElementById('vid11').onloadedmetadata = function() {
-            this.currentTime = 40;
-        };
-        document.getElementById('vid12').onloadedmetadata = function() {
-            this.currentTime = 34;
-        };
-        document.getElementById('vid13').onloadedmetadata = function() {
-            this.currentTime = 9;
-        };
-        document.getElementById('vid14').onloadedmetadata = function() {
-            this.currentTime = 71;
-        };
-        document.getElementById('vid15').onloadedmetadata = function() {
-            this.currentTime = 66;
-        };
-        document.getElementById('vid16').onloadedmetadata = function() {
-            this.currentTime = 25;
-        };
-        document.getElementById('vid17').onloadedmetadata = function() {
-            this.currentTime = 9;
-        };
-        document.getElementById('vid18').onloadedmetadata = function() {
-            this.currentTime = 31;
-        };
+        <script>
+            filterSelection("all")
 
-        document.getElementById('vid19').onloadedmetadata = function() {
-            this.currentTime = 32;
-        };
-    </script>
-
-    <script>
-        filterSelection("all")
-
-        function filterSelection(c) {
-            var x, i;
-            x = document.getElementsByClassName("filterDiv");
-            if (c == "all") c = "";
-            for (i = 0; i < x.length; i++) {
-                w3RemoveClass(x[i], "show");
-                if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
-            }
-        }
-
-        function w3AddClass(element, name) {
-            var i, arr1, arr2;
-            arr1 = element.className.split(" ");
-            arr2 = name.split(" ");
-            for (i = 0; i < arr2.length; i++) {
-                if (arr1.indexOf(arr2[i]) == -1) {
-                    element.className += " " + arr2[i];
+            function filterSelection(c) {
+                var x, i;
+                x = document.getElementsByClassName("filterDiv");
+                if (c == "all") c = "";
+                for (i = 0; i < x.length; i++) {
+                    w3RemoveClass(x[i], "show");
+                    if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
                 }
             }
-        }
 
-        function w3RemoveClass(element, name) {
-            var i, arr1, arr2;
-            arr1 = element.className.split(" ");
-            arr2 = name.split(" ");
-            for (i = 0; i < arr2.length; i++) {
-                while (arr1.indexOf(arr2[i]) > -1) {
-                    arr1.splice(arr1.indexOf(arr2[i]), 1);
+            function w3AddClass(element, name) {
+                var i, arr1, arr2;
+                arr1 = element.className.split(" ");
+                arr2 = name.split(" ");
+                for (i = 0; i < arr2.length; i++) {
+                    if (arr1.indexOf(arr2[i]) == -1) {
+                        element.className += " " + arr2[i];
+                    }
                 }
             }
-            element.className = arr1.join(" ");
-        }
 
-        // Add active class to the current button (highlight it)
-        var btnContainer = document.getElementById("myBtnContainer");
-        var btns = btnContainer.getElementsByClassName("btn");
-        for (var i = 0; i < btns.length; i++) {
-            btns[i].addEventListener("click", function() {
-                var current = document.getElementsByClassName("active");
-                current[0].className = current[0].className.replace(" active", "");
-                this.className += " active";
-            });
-        }
-    </script>
+            function w3RemoveClass(element, name) {
+                var i, arr1, arr2;
+                arr1 = element.className.split(" ");
+                arr2 = name.split(" ");
+                for (i = 0; i < arr2.length; i++) {
+                    while (arr1.indexOf(arr2[i]) > -1) {
+                        arr1.splice(arr1.indexOf(arr2[i]), 1);
+                    }
+                }
+                element.className = arr1.join(" ");
+            }
+
+            // Add active class to the current button (highlight it)
+            var btnContainer = document.getElementById("myBtnContainer");
+            var btns = btnContainer.getElementsByClassName("btn");
+            for (var i = 0; i < btns.length; i++) {
+                btns[i].addEventListener("click", function() {
+                    var current = document.getElementsByClassName("active");
+                    current[0].className = current[0].className.replace(" active", "");
+                    this.className += " active";
+                });
+            }
+        </script>
 
 
 
