--- a/sprong.html
+++ b/sprong.html
@@ -137,11 +137,11 @@
                     <div class="col-md-12 col-sm-12 star">
                         <div class="slider-container">
                             <div class="slider sprong">
+                                <img src="assets/work/sprong/slide1/idea4.png" alt="">
                                 <img src="assets/work/sprong/slide1/2P1110209.jpg" alt="">
                                 <img src="assets/work/sprong/slide1/tumblr_ppula21SJ81y8563ko3_1280.jpg" alt="">
                                 <img src="assets/work/sprong/slide1/idea3.png" alt="">
-                                <img src="assets/work/sprong/slide1/idea4.png" alt="">
-                                <img src="assets/work/sprong/slide1/zw/54520401_2127223257357918_8978362865790484480_o.jpg" alt="">
+                                <!--<img src="assets/work/sprong/slide1/zw/54520401_2127223257357918_8978362865790484480_o.jpg" alt="">-->
                                 <img src="assets/work/sprong/slide1/apr26afinitydiagram.jpg" alt="">
                                 <img src="assets/work/sprong/slide1/mrt15stakeholdermap.jpg" alt="">
                                 <img src="assets/work/sprong/slide1/mrt14ideasfunctions5.jpg" alt="">
