--- a/vz.html
+++ b/vz.html
@@ -96,7 +96,7 @@
                     </div>
 
 
-                    <div class="col-md-12 col-sm-12 star">
+                    <!--<div class="col-md-12 col-sm-12 star">
                     </div>
 
 
@@ -130,11 +130,7 @@
                         <img src="assets/work/vz/vzgamecongratulations.png" class="img-responsive" alt="About">
                     </div>
                     <div class="col-md-1 col-sm-1 star">
-                    </div>
-
-
-
-
+                    </div>-->
 
 
                     <div class="col-md-12 col-sm-12 star"></div>
@@ -142,43 +138,71 @@
                         <div class="slider-container">
 
                             <div class="slider vz">
-                                <img src="assets/work/vz/41529189_1860824667331113_3393831063640866816_o.jpg" alt="">
-                                <img src="assets/work/vz/IMG_0140.JPG" alt="">
+                                <img src="assets/work/vz/vzgamestart.png" class="img-responsive" alt="About">
+                                <img src="assets/work/vz/vzgame.png" class="img-responsive" alt="About">
+                                <img src="assets/work/vz/vzgamescore.png" class="img-responsive" alt="About">
+                                <img src="assets/work/vz/vzgamename.png" class="img-responsive" alt="About">
+                                <img src="assets/work/vz/vzgameupgrade.png" class="img-responsive" alt="About">
+                                <img src="assets/work/vz/vzgamecongratulations.png" class="img-responsive" alt="About">
+
                             </div>
                         </div>
+                    </div>
+
+
+
+                    <div class="col-md-12 col-sm-12 star"></div>
+                    <div class="col-md-12 col-sm-12 star">
+                        <div class="slider-container">
+
+                            <div class="slider">
+                                <img src="assets/work/vz/vz-firstnotes.png" alt="first notes">
+                                <img src="assets/work/vz/41529189_1860824667331113_3393831063640866816_o.jpg" alt="">
+                                <img src="assets/work/vz/vz-ideation2.png" alt="">
+
+
+
+                                <img src="assets/work/vz/IMG_0140.JPG" alt="">
+                                <img src="assets/work/vz/vz-ideation1.png" alt="">
+
+                            </div>
+                        </div>
+                    </div>
 
 
 
 
 
-                        <div class="col-md-12 col-sm-12 star"></div>
-
-                        <div class="col-md-12 col-sm-12 star">
 
 
-                            <video loop="loop" autoplay="autoplay" controls muted class="col-md-12 col-sm-12 star">
+                    <div class="col-md-12 col-sm-12 star"></div>
+
+                    <div class="col-md-12 col-sm-12 star">
+
+
+                        <video loop="loop" autoplay="autoplay" controls muted class="col-md-12 col-sm-12 star">
   							<source src="assets/work/vz/Video_Prototype_The Network_VodafoneZiggo_Project 1.mp4" type="video/mp4"/>
   						Your browser does not support HTML5 video.
 						</video>
-                            <a href="https://share.protopie.io/J2iDT33Tz6i" target="_blank" style="font-weight: 400;">
-                                <p style="color: #a6a6a6"><br>Clickable prototype - Click here to test the prototype yourself.</p>
-                            </a>
-                        </div>
-
-
-
-
-
-
-
-
-
-                        <div class="col-md-12 col-sm-12 text-center">
-                            <p><a href="index.html">Go back to my work</a></p>
-                        </div>
-
-
+                        <a href="https://share.protopie.io/J2iDT33Tz6i" target="_blank" style="font-weight: 400;">
+                            <p style="color: #a6a6a6"><br>Clickable prototype - Click here to test the prototype yourself.</p>
+                        </a>
                     </div>
+
+
+
+
+
+
+
+
+
+                    <div class="col-md-12 col-sm-12 text-center">
+                        <p><a href="index.html">Go back to my work</a></p>
+                    </div>
+
+
+
 
                 </div>
             </div>
