--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Love to hangout and have a cup? Feel free to contact me!
     <title>Saskia Wijnstra</title>
 
     <meta itemprop="name" content="Saskia Wijnstra" />
-    <meta name="description" content="The portfolio website from Saskia Wijnstra. Digital Designer and Creative Sporty.">
+    <meta name="description" content="Portfolio website from Saskia Wijnstra. I am a Digital & Visual Designer. Design is making clear creative solutions from messy ideas.">
     <meta name="keywords" content="Saskia, Wijnstra, Design, User Interface, Digital, Designer, Creative, Portfolio.">
     <meta name="author" content="Saskia Wijnstra">
     <meta itemprop="url" content="http://www.saskiawijnstra.nl/" />
