--- a/hbm.html
+++ b/hbm.html
@@ -93,6 +93,7 @@
 
 
                     <div class="col-md-3 col-sm-3 star">
+                        <img src="assets/work/hbm/DIA.png" alt="DIA award" style="width: 100%">
                     </div>
 
                     <div class="col-md-6 col-sm-6 star" style="text-align: left; padding-top: 0px; padding-bottom: 20px;">
