--- a/hbm.html
+++ b/hbm.html
@@ -271,7 +271,7 @@
                     <div class="col-md-4 col-sm-4 star">
                     </div>
                     <div class="col-md-4 col-sm-4 star" style="padding-top: 50px; padding-bottom: 50px;">
-                        <video width="80%" controls autoplay loop>
+                        <video width="80%" controls loop="loop" autoplay="autoplay" muted>
   								<source src="assets/work/hbm/ar-app.mp4" type="video/mp4;">
 								Your browser does not support the video tag.
 						</video>
