--- a/index.html
+++ b/index.html
@@ -164,13 +164,18 @@ Love to hangout and have a cup? Feel free to contact me!
 
                 <div class="col-md-6 col-sm-6 star">
                     <div class="portfolio-thumb">
-                        <a href="hbm.html"><img src="assets/work/hbm/DSC_0970.jpg" class="img-responsive" alt="Portfolio"></a>
                         <a href="hbm.html">
-                            <div class="portfolio-overlay">
-                                <div class="portfolio-item">
+                            <video loop="loop" autoplay="autoplay" muted class="col-md-12 col-sm-12" style="padding: 0">
+                                <source src="assets/work/hbm/hbm-ar-workpage2.mp4" type="video/mp4;">
+                              Your browser does not support the video tag.
+                            </video>
+                            <!--<img src="assets/work/hbm/DSC_0970.jpg" class="img-responsive" alt="Portfolio"></a>-->
+                            <a href="hbm.html">
+                                <div class="portfolio-overlay">
+                                    <div class="portfolio-item">
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
 
                     </div>
                 </div>
