--- a/index.html
+++ b/index.html
@@ -137,7 +137,14 @@ Love to hangout and have a cup? Feel free to contact me!
 
                 <div class="col-md-6 col-sm-6 star">
                     <div class="portfolio-thumb">
-                        <a href="sprong.html"><img src="assets/work/sprong/Sprong-Workpage.png" class="img-responsive" alt="Portfolio"></a>
+                        <a href="sprong.html">
+
+                            <video loop="loop" autoplay="autoplay" muted class="col-md-12 col-sm-12" style="padding: 0">
+                                    <source src="assets/work/sprong/sprongworkpage.mp4" type="video/mp4;">
+                                  Your browser does not support the video tag.
+                                </video>
+                            <!--<img src="assets/work/sprong/Sprong-Workpage.png" class="img-responsive" alt="Portfolio">-->
+                        </a>
                         <a href="sprong.html">
                             <div class="portfolio-overlay">
                                 <div class="portfolio-item">
