--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@ Love to hangout and have a cup? Feel free to contact me!
     <link rel="icon" type="image/png" href="assets/saskia.nl/favicon-32.png" />
     <link rel="shortcut icon" type="image/x-icon" href="assets/saskia.nl/favicon-32.png" />
 
-
-    <!--------->
-
+    <!-- ========================================================================= -->
 
     <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
     <script>
@@ -71,13 +69,13 @@ Love to hangout and have a cup? Feel free to contact me!
         firebase.initializeApp(config);
     </script>
 
+    <!-- ========================================================================= -->
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
     <!-- Main css -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <!--<link rel="stylesheet" href="assets/css/grijs.css">-->
     <link rel="stylesheet" href="assets/css/wit.css">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
@@ -118,9 +116,7 @@ Love to hangout and have a cup? Feel free to contact me!
             <div class="row">
 
                 <div class="col-md-12 col-sm-12">
-                    <h3 align="left" class="ruimte">I am a Digital & Visual Designer.<br>Design is making clear creative<br>solutions from messy ideas.</h3>
-                    <!--<h2 class="begintitel" style="width: 70%; margin-left: 15%;">I am a user interface designer and a creative sporty.</h2>-->
-
+                    <h3 class="ruimte">I am a Digital & Visual Designer.<br>Design is making clear creative<br>solutions from messy ideas.</h3>
                 </div>
 
             </div>
@@ -143,7 +139,6 @@ Love to hangout and have a cup? Feel free to contact me!
                                     <source src="assets/work/sprong/sprongworkpage.mp4" type="video/mp4;">
                                   Your browser does not support the video tag.
                                 </video>
-                            <!--<img src="assets/work/sprong/Sprong-Workpage.png" class="img-responsive" alt="Portfolio">-->
                         </a>
                         <a href="sprong.html">
                             <div class="portfolio-overlay">
@@ -163,6 +158,7 @@ Love to hangout and have a cup? Feel free to contact me!
                                 </div>
                             </div>
                         </a>
+                        </a>
 
                     </div>
                 </div>
@@ -176,13 +172,13 @@ Love to hangout and have a cup? Feel free to contact me!
                                 <source src="assets/work/hbm/hbm-ar-workpage2.mp4" type="video/mp4;">
                               Your browser does not support the video tag.
                             </video>
-                            <!--<img src="assets/work/hbm/DSC_0970.jpg" class="img-responsive" alt="Portfolio"></a>-->
                             <a href="hbm.html">
                                 <div class="portfolio-overlay">
                                     <div class="portfolio-item">
                                     </div>
                                 </div>
                             </a>
+                        </a>
 
                     </div>
                 </div>
@@ -199,12 +195,6 @@ Love to hangout and have a cup? Feel free to contact me!
 
                     </div>
                 </div>
-
-
-
-
-
-
 
             </div>
         </div>
@@ -247,8 +237,6 @@ Love to hangout and have a cup? Feel free to contact me!
 
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-
-    <script src="//code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 
     <script>
         function showImages(el) {
