--- a/index.html
+++ b/index.html
@@ -72,13 +72,8 @@ Love to hangout and have a cup? Feel free to contact me!
     <!-- ========================================================================= -->
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
-
-    <!-- Main css -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/wit.css">
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 
 </head>
 
@@ -216,13 +211,13 @@ Love to hangout and have a cup? Feel free to contact me!
                 </div>
 
 
-                <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
+                <div class="col-md-5 col-sm-5">
                     <ul class="social-icon">
                         <li>
-                            <a target="_blank" href="https://nl.linkedin.com/in/saskiawijnstra" class="fa fa-linkedin"></a>
+                            <a target="_blank" href="https://nl.linkedin.com/in/saskiawijnstra" class="linkedin"><img src="assets/saskia.nl/linkedin.png" class="img-responsive" alt="linkedin" width="21" height="21"></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.instagram.com/saskiawijnstra/" class="fa fa-instagram"></a>
+                            <a target="_blank" href="https://www.instagram.com/saskiawijnstra/" class="insta"><img src="assets/saskia.nl/instagram.png" class="img-responsive" alt="instagram" width="21" height="21"></a>
                         </li>
                     </ul>
                 </div>
