--- a/sprong.html
+++ b/sprong.html
@@ -1,32 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<!--
+================================================================
 
+Website: www.saskiawijnstra.nl | E-mail: info@saskiawijnstra.nl
+
+Love to hangout and have a cup? Feel free to contact me!
+
+         {
+      {   }
+       }_{ __{
+    .-{   }   }-.
+   (   }     {   )
+   |`-.._____..-'|
+   |             ;--.
+   |            (__  \
+   |             | )  )
+   |             |/  /
+   |             /  /
+   |            (  /
+   \             y'
+    `-.._____..-'
+
+================================================================
+-->
+
+
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>Saskia Wijnstra</title>
-    <link rel="icon" type="image/png" href="assets/saskia.nl/favicon-32.png" />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
-    <!-- Main css -->
+    <meta itemprop="name" content="Saskia Wijnstra" />
+    <meta name="description" content="Portfolio website from Saskia Wijnstra. I am a Digital & Visual Designer. Design is making clear creative solutions from messy ideas.">
+    <meta name="keywords" content="Saskia, Wijnstra, Design, User Interface, Digital, Designer, Creative, Portfolio.">
+    <meta name="author" content="Saskia Wijnstra">
+    <meta itemprop="url" content="http://www.saskiawijnstra.nl/" />
+    <meta itemprop="thumbnailUrl" content="assets/saskia.nl/Saskia-1000w.png" />
+    <meta itemprop="image" content="assets/saskia.nl/Saskia-1000w.png" />
+    <link rel="image_src" href="assets/saskia.nl/Saskia-1000w.png" />
+
+    <meta property="og:image" content="assets/saskia.nl/Saskia-1000w.png" />
+    <meta property="og:site_name" content="Saskia Wijnstra" />
+    <meta property="og:title" content="Saskia Wijnstra" />
+    <meta property="og:url" content="http://www.saskiawijnstra.nl/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="The portfolio website from Saskia Wijnstra. Digital Designer and Creative Sporty." />
+
+    <link rel="icon" type="image/png" href="assets/saskia.nl/favicon-32.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/saskia.nl/favicon-32.png" />
+
+    <!-- ========================================================================= -->
+
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/grijs.css">
-    <!--<link rel="stylesheet" href="assets/css/wit.css">-->
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-
 
     <!---slider--->
     <script src="assets/js/jquery.js"></script>
-
     <link rel="stylesheet" href="assets/css/main.css">
     <script src="assets/js/main.js"></script>
 
@@ -106,17 +140,8 @@
                     </div>
 
 
-
-
-
-
-
-
-
                     <div class="col-md-12 col-sm-12 star">
                     </div>
-
-
 
                     <div class="col-md-1 col-sm-1 star">
                     </div>
@@ -125,10 +150,6 @@
                     </div>
                     <div class="col-md-1 col-sm-1 star">
                     </div>
-
-
-
-
 
                     <div class="col-md-12 col-sm-12 star">
                     </div>
@@ -141,7 +162,6 @@
                                 <img src="assets/work/sprong/slide1/2P1110209.jpg" alt="">
                                 <img src="assets/work/sprong/slide1/tumblr_ppula21SJ81y8563ko3_1280.jpg" alt="">
                                 <img src="assets/work/sprong/slide1/idea3.png" alt="">
-                                <!--<img src="assets/work/sprong/slide1/zw/54520401_2127223257357918_8978362865790484480_o.jpg" alt="">-->
                                 <img src="assets/work/sprong/slide1/apr26afinitydiagram.jpg" alt="">
                                 <img src="assets/work/sprong/slide1/mrt15stakeholdermap.jpg" alt="">
                                 <img src="assets/work/sprong/slide1/mrt14ideasfunctions5.jpg" alt="">
@@ -151,20 +171,6 @@
 
                         </div>
                     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
                     <div class="col-md-12 col-sm-12 star">
                     </div>
@@ -178,10 +184,6 @@
                     </div>
                     <div class="col-md-1 col-sm-1 star">
                     </div>
-
-
-
-
 
                     <div class="col-md-12 col-sm-12 star">
                     </div>
@@ -197,10 +199,6 @@
                         </a>
                     </div>
 
-
-
-
-
                     <div class="col-md-12 col-sm-12 star">
 
 
@@ -214,15 +212,6 @@
                     <div class="col-md-12 col-sm-12 star">
                         <img src="assets/work/sprong/sprong-fullpage-screenstre.png" class="img-responsive" alt="Portfolio">
                     </div>
-
-
-
-
-
-
-
-
-
 
                     <div class="col-md-12 col-sm-12 text-center">
                         <p><a href="index.html">Go back to my work</a></p>
@@ -251,13 +240,13 @@
                 </div>
 
 
-                <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
+                <div class="col-md-5 col-sm-5">
                     <ul class="social-icon">
                         <li>
-                            <a target="_blank" href="https://nl.linkedin.com/in/saskiawijnstra" class="fa fa-linkedin"></a>
+                            <a target="_blank" href="https://nl.linkedin.com/in/saskiawijnstra" class="linkedin"><img src="assets/saskia.nl/linkedin.png" class="img-responsive" alt="linkedin" width="21" height="21"></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.instagram.com/saskiawijnstra/" class="fa fa-instagram"></a>
+                            <a target="_blank" href="https://www.instagram.com/saskiawijnstra/" class="insta"><img src="assets/saskia.nl/instagram.png" class="img-responsive" alt="instagram" width="21" height="21"></a>
                         </li>
                     </ul>
                 </div>
