--- a/vz.html
+++ b/vz.html
@@ -1,33 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<!--
+================================================================
 
+Website: www.saskiawijnstra.nl | E-mail: info@saskiawijnstra.nl
+
+Love to hangout and have a cup? Feel free to contact me!
+
+         {
+      {   }
+       }_{ __{
+    .-{   }   }-.
+   (   }     {   )
+   |`-.._____..-'|
+   |             ;--.
+   |            (__  \
+   |             | )  )
+   |             |/  /
+   |             /  /
+   |            (  /
+   \             y'
+    `-.._____..-'
+
+================================================================
+-->
+
+
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>Saskia Wijnstra</title>
-    <link rel="icon" type="image/png" href="assets/saskia.nl/favicon-32.png" />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
-    <!-- Main css -->
+    <meta itemprop="name" content="Saskia Wijnstra" />
+    <meta name="description" content="Portfolio website from Saskia Wijnstra. I am a Digital & Visual Designer. Design is making clear creative solutions from messy ideas.">
+    <meta name="keywords" content="Saskia, Wijnstra, Design, User Interface, Digital, Designer, Creative, Portfolio.">
+    <meta name="author" content="Saskia Wijnstra">
+    <meta itemprop="url" content="http://www.saskiawijnstra.nl/" />
+    <meta itemprop="thumbnailUrl" content="assets/saskia.nl/Saskia-1000w.png" />
+    <meta itemprop="image" content="assets/saskia.nl/Saskia-1000w.png" />
+    <link rel="image_src" href="assets/saskia.nl/Saskia-1000w.png" />
+
+    <meta property="og:image" content="assets/saskia.nl/Saskia-1000w.png" />
+    <meta property="og:site_name" content="Saskia Wijnstra" />
+    <meta property="og:title" content="Saskia Wijnstra" />
+    <meta property="og:url" content="http://www.saskiawijnstra.nl/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="The portfolio website from Saskia Wijnstra. Digital Designer and Creative Sporty." />
+
+    <link rel="icon" type="image/png" href="assets/saskia.nl/favicon-32.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/saskia.nl/favicon-32.png" />
+
+    <!-- ========================================================================= -->
+
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/grijs.css">
-    <!--<link rel="stylesheet" href="assets/css/wit.css">-->
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-
 
     <!---slider--->
     <script src="assets/js/jquery.js"></script>
     <link rel="stylesheet" href="assets/css/main.css">
     <script src="assets/js/main.js"></script>
+
 
 </head>
 
@@ -96,43 +132,6 @@
                     </div>
 
 
-                    <!--<div class="col-md-12 col-sm-12 star">
-                    </div>
-
-
-                    <div class="col-md-1 col-sm-1 star">
-                    </div>
-                    <div class="col-md-3 col-sm-3 star">
-                        <img src="assets/work/vz/vzgamestart.png" class="img-responsive" alt="About">
-                    </div>
-                    <div class="col-md-3 col-sm-3 star">
-                        <img src="assets/work/vz/vzgame.png" class="img-responsive" alt="About">
-                    </div>
-                    <div class="col-md-3 col-sm-3 star">
-                        <img src="assets/work/vz/vzgamescore.png" class="img-responsive" alt="About">
-                    </div>
-                    <div class="col-md-2 col-sm-2 star">
-                    </div>
-
-                    <div class="col-md-12 col-sm-12 star">
-                    </div>
-
-
-                    <div class="col-md-2 col-sm-2 star">
-                    </div>
-                    <div class="col-md-3 col-sm-3 star">
-                        <img src="assets/work/vz/vzgamename.png" class="img-responsive" alt="About">
-                    </div>
-                    <div class="col-md-3 col-sm-3 star">
-                        <img src="assets/work/vz/vzgameupgrade.png" class="img-responsive" alt="About">
-                    </div>
-                    <div class="col-md-3 col-sm-3 star">
-                        <img src="assets/work/vz/vzgamecongratulations.png" class="img-responsive" alt="About">
-                    </div>
-                    <div class="col-md-1 col-sm-1 star">
-                    </div>-->
-
-
                     <div class="col-md-12 col-sm-12 star"></div>
                     <div class="col-md-12 col-sm-12 star">
                         <div class="slider-container">
@@ -159,20 +158,12 @@
                                 <img src="assets/work/vz/vz-firstnotes.png" alt="first notes">
                                 <img src="assets/work/vz/41529189_1860824667331113_3393831063640866816_o.jpg" alt="">
                                 <img src="assets/work/vz/vz-ideation2.png" alt="">
-
-
-
                                 <img src="assets/work/vz/IMG_0140.JPG" alt="">
                                 <img src="assets/work/vz/vz-ideation1.png" alt="">
 
                             </div>
                         </div>
                     </div>
-
-
-
-
-
 
 
                     <div class="col-md-12 col-sm-12 star"></div>
@@ -188,13 +179,6 @@
                             <p style="color: #a6a6a6"><br>Clickable prototype - Click here to test the prototype yourself.</p>
                         </a>
                     </div>
-
-
-
-
-
-
-
 
 
                     <div class="col-md-12 col-sm-12 text-center">
@@ -224,13 +208,13 @@
                 </div>
 
 
-                <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
+                <div class="col-md-5 col-sm-5">
                     <ul class="social-icon">
                         <li>
-                            <a target="_blank" href="https://nl.linkedin.com/in/saskiawijnstra" class="fa fa-linkedin"></a>
+                            <a target="_blank" href="https://nl.linkedin.com/in/saskiawijnstra" class="linkedin"><img src="assets/saskia.nl/linkedin.png" class="img-responsive" alt="linkedin" width="21" height="21"></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.instagram.com/saskiawijnstra/" class="fa fa-instagram"></a>
+                            <a target="_blank" href="https://www.instagram.com/saskiawijnstra/" class="insta"><img src="assets/saskia.nl/instagram.png" class="img-responsive" alt="instagram" width="21" height="21"></a>
                         </li>
                     </ul>
                 </div>
