--- a/about.html
+++ b/about.html
@@ -1,27 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<!--
+================================================================
 
+Website: www.saskiawijnstra.nl | E-mail: info@saskiawijnstra.nl
+
+Love to hangout and have a cup? Feel free to contact me!
+
+         {
+      {   }
+       }_{ __{
+    .-{   }   }-.
+   (   }     {   )
+   |`-.._____..-'|
+   |             ;--.
+   |            (__  \
+   |             | )  )
+   |             |/  /
+   |             /  /
+   |            (  /
+   \             y'
+    `-.._____..-'
+
+================================================================
+-->
+
+
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>Saskia Wijnstra</title>
-    <link rel="icon" type="image/png" href="assets/saskia.nl/favicon-32.png" />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
-    <!-- Main css -->
+    <meta itemprop="name" content="Saskia Wijnstra" />
+    <meta name="description" content="Portfolio website from Saskia Wijnstra. I am a Digital & Visual Designer. Design is making clear creative solutions from messy ideas.">
+    <meta name="keywords" content="Saskia, Wijnstra, Design, User Interface, Digital, Designer, Creative, Portfolio.">
+    <meta name="author" content="Saskia Wijnstra">
+    <meta itemprop="url" content="http://www.saskiawijnstra.nl/" />
+    <meta itemprop="thumbnailUrl" content="assets/saskia.nl/Saskia-1000w.png" />
+    <meta itemprop="image" content="assets/saskia.nl/Saskia-1000w.png" />
+    <link rel="image_src" href="assets/saskia.nl/Saskia-1000w.png" />
+
+    <meta property="og:image" content="assets/saskia.nl/Saskia-1000w.png" />
+    <meta property="og:site_name" content="Saskia Wijnstra" />
+    <meta property="og:title" content="Saskia Wijnstra" />
+    <meta property="og:url" content="http://www.saskiawijnstra.nl/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="The portfolio website from Saskia Wijnstra. Digital Designer and Creative Sporty." />
+
+    <link rel="icon" type="image/png" href="assets/saskia.nl/favicon-32.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/saskia.nl/favicon-32.png" />
+
+    <!-- ========================================================================= -->
+
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <!--<link rel="stylesheet" href="assets/css/grijs.css">-->
     <link rel="stylesheet" href="assets/css/wit.css">
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 
 </head>
 
@@ -141,26 +177,9 @@
                     </div>
 
 
-
-
-
-
-
-
-
-
                     <div class="col-md-12 col-sm-12 text-center">
                         <p><a href="index.html">View my work</a></p>
                     </div>
-
-
-
-
-
-
-
-
-
 
                 </div>
 
@@ -185,13 +204,13 @@
                 </div>
 
 
-                <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
+                <div class="col-md-5 col-sm-5">
                     <ul class="social-icon">
                         <li>
-                            <a target="_blank" href="https://nl.linkedin.com/in/saskiawijnstra" class="fa fa-linkedin"></a>
+                            <a target="_blank" href="https://nl.linkedin.com/in/saskiawijnstra" class="linkedin"><img src="assets/saskia.nl/linkedin.png" class="img-responsive" alt="linkedin" width="21" height="21"></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.instagram.com/saskiawijnstra/" class="fa fa-instagram"></a>
+                            <a target="_blank" href="https://www.instagram.com/saskiawijnstra/" class="insta"><img src="assets/saskia.nl/instagram.png" class="img-responsive" alt="instagram" width="21" height="21"></a>
                         </li>
                     </ul>
                 </div>
